--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Menu w restauracji cz.1</title>
+  <title>Restaurant Menu</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
